fix flex-tab on ie11 and fix all will-change

--- a/packages/rocketchat-theme/assets/stylesheets/rtl.less
+++ b/packages/rocketchat-theme/assets/stylesheets/rtl.less
@@ -217,9 +217,9 @@
 	}
 
 	.main-content {
-		left: 0;
+		left: 40px;
 		right: @rooms-box-width;
-		.transition(left .25s cubic-bezier(.5, 0, .1, 1));
+		transition: left 0.25s cubic-bezier(0.5, 0, 0.1, 1);
 
 		&.flex-opened {
 			left: @flex-tab-width + 40px;
@@ -359,10 +359,12 @@
 	}
 
 	.flex-tab {
-		.right(100%);
+		left: 40px - @flex-tab-width;
+		right: auto;
 		border-left: unset;
 		border-width: 0 1px 0 0;
 		border-right-color: @tertiary-background-color;
+		transition: left 0.25s cubic-bezier(0.5, 0, 0.1, 1);
 
 		.control {
 			text-align: right;
@@ -396,6 +398,9 @@
 
 	.flex-opened {
 		.flex-tab {
+			left: 40px;
+			right: auto;
+
 			.control {
 				.more {
 					.transform(translateX(0));
@@ -497,10 +502,6 @@
 			.flex-opened {
 				left: 0;
 				right: @rooms-box-width;
-
-				.flex-tab {
-					.transform(translateX(calc(~'100% + 40px')));
-				}
 			}
 		}
 	}
